# sage

./: .replit  app.py  pyproject.toml  requirements.txt
assets/: stock_images.py
attached_assets/: Pasted--Project-Breakdown-Stock-Analysis-Website-1-Core-Features-of-the-Website-a-Stock-Data-and-Anal-1746813511160.txt
pages/: analysis.py  company.py  donate.py  home.py  news.py
utils/: fundamental_analysis.py  generate_sample_news.py  news.py  stock_data.py  technical_analysis.py
