[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
    "ta>=0.11.0",
    "trafilatura>=2.0.0",
    "yahooquery>=2.3.2",
    "yfinance>=0.2.59",
]
